protocols/tests/inverters/inverter_d0.out
error: Thread 0 attempted conflicting assignment to 'a': current=ValueOwned(11111111111111111111111111111111), new=ValueOwned(00000000000000000000000000000000)
  ┌─ inverters/inverter_d0.prot:7:3
  │
7 │   DUT.a := DUT.s;
  │   ^^^^^^^^^^^^^^^ Thread 0 attempted conflicting assignment to 'a': current=ValueOwned(11111111111111111111111111111111), new=ValueOwned(00000000000000000000000000000000)

